--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -13,6 +13,14 @@ td {
   }
 }
 
+body td.mail-wrapper {
+  padding-top: 46px;
+  padding-bottom: 46px;
+}
+
+h1 {
+  color: $primary-color;
+}
 
 table {
   center {
@@ -23,7 +31,6 @@ table {
 center {
   min-width: 0;
 }
-
 
 
 .t-center {
