--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -22,7 +22,7 @@
   <body>
     <table class="body">
       <tr>
-        <td class="center" align="center" valign="top">
+        <td class="center mail-wrapper" align="center" valign="top" >
             <center>
                 {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened emails are created. --}}
                 {{> body}}
