--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,59 +1,50 @@
-<container class="footer-container" align="left">
-    <row>
-        <columns style="padding-top: 48px;padding-bottom: 24px">
-            <table class="footer-table">
+<row class="footer-container" >
+    <columns style="padding-top: 45px;padding-bottom: 48px">
+        <table class="footer-table">
+            <tr>
+                <td style="padding-bottom: 16px">
+                    <a href="https://www.invibes.com/" target="_blank" rel="noopener" style="font-size: 1px;line-height: 1">
+                        <center>
+                            <img src="https://www.invibes.com/resources/images/footerLogo.png" alt="" width="111" style="width: 111px">
+                        </center>
+                    </a>
+                </td>
+            </tr>
+            <tr><td style="padding-bottom: 22px"><h2 style="text-align: center;font-size: 20px;"><b>in-feed your brand</b></h2></td></tr>
+        </table>
+        <center>
+            <table style="width: 120px" width="120" align="center">
                 <tr>
-                    <td style="padding-bottom: 18px">
-                        <a href="https://www.invibes.com/" target="_blank" rel="noopener" style="font-size: 1px;line-height: 1">
-                            <center>
-                                <img src="https://www.invibes.com/resources/images/footerLogo.png" alt="" width="133" style="width: 133px">
+                    <td style="vertical-align: middle">
+                        <a href="https://www.linkedin.com/company/invibes/" target="_blank" title="linkedin">
+                            <center style="min-width: 0px;">
+                                <img src="https://www.invibes.com/resources/images/newsletter/in.png" alt="" height="16" style="height: 16px;">
+                            </center>
+                        </a>
+                    </td>
+                    <td style="vertical-align: middle">
+                        <a href="https://twitter.com/invibes_adv" target="_blank" title="twitter">
+                            <center style="min-width: 0px;">
+                                <img src="https://www.invibes.com/resources/images/newsletter/twit.png" alt="" height="16" style="height: 16px;">
+                            </center>
+                        </a>
+                    </td>
+                    <td style="vertical-align: middle">
+                        <a href="#" target="_blank" title="">
+                            <center style="min-width: 0px;">
+                                <img src="https://i.ibb.co/K0wHBYJ/cust-l.png" alt="" height="16" style="height: 16px;">
+                            </center>
+                        </a>
+                    </td>
+                    <td style="vertical-align: middle">
+                        <a href="https://www.instagram.com/invibes/" target="_blank"  title="instagram">
+                            <center style="min-width: 0px;">
+                                <img src="https://www.invibes.com/resources/images/newsletter/inst.png" alt="instagram" height="16" style="height: 16px;">
                             </center>
                         </a>
                     </td>
                 </tr>
-                <tr><td style="padding-bottom: 28px"><h2 style="text-align: center;font-size: 18px;"><b>in-feed your brand</b></h2></td></tr>
             </table>
-            <center>
-                <table style="width: 120px" width="120" align="center">
-                    <tr>
-                        <td style="vertical-align: middle">
-                            <a href="https://www.linkedin.com/company/invibes/" target="_blank">
-                                <center style="min-width: 0px;">
-                                    <img src="https://www.invibes.com/resources/images/newsletter/in.png" alt="" height="16" style="height: 16px;">
-                                </center>
-                            </a>
-                        </td>
-                        <td style="vertical-align: middle">
-                            <a href="https://twitter.com/invibes_adv" target="_blank" >
-                                <center style="min-width: 0px;">
-                                    <img src="https://www.invibes.com/resources/images/newsletter/twit.png" alt="" height="16" style="height: 16px;">
-                                </center>
-                            </a>
-                        </td>
-                        <td style="vertical-align: middle">
-                            <a href="https://www.youtube.com/channel/UC0rDRrlWtBtwHA7h9syTH3Q" target="_blank" >
-                                <center style="min-width: 0px;">
-                                    <img src="https://www.invibes.com/resources/images/newsletter/yt.png" alt="" height="16" style="height: 16px;">
-                                </center>
-                            </a>
-                        </td>
-                        <td style="vertical-align: middle">
-                            <a href="https://www.instagram.com/invibes_it/" target="_blank">
-                                <center style="min-width: 0px;">
-                                    <img src="https://www.invibes.com/resources/images/newsletter/inst.png" alt="" height="16" style="height: 16px;">
-                                </center>
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-            </center>
-            <table>
-                <tr>
-                    <td style="text-align: center; font-size: 7px;padding-top: 56px;">
-                        Copyright &copy; 2022 Invibes Advertising
-                    </td>
-                </tr>
-            </table>
-        </columns>
-    </row>
-</container>
+        </center>
+    </columns>
+</row>
