--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -31,7 +31,7 @@ $global-width: 600px;
 $global-width-small: 100%;
 $global-gutter: 44px;
 $global-gutter-small: 16px;
-$body-background: #fff;
+$body-background: darken(#fff,3%);
 $container-background: #fff;
 $global-padding: 32px;
 $global-margin: 16px;
