--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,44 +2,46 @@
     <columns style="padding-top: 45px;padding-bottom: 48px">
         <table class="footer-table">
             <tr>
-                <td style="padding-bottom: 16px">
-                    <a href="https://www.invibes.com/" target="_blank" rel="noopener" style="font-size: 1px;line-height: 1">
+                <td>
+                    <a href="https://www.invibes.com/" title="main page" target="_blank" rel="noopener" style="font-size: 1px;line-height: 1">
                         <center>
-                            <img src="https://www.invibes.com/resources/images/footerLogo.png" alt="" width="111" style="width: 111px">
+                            <img src="https://www.invibes.com/resources/images/newsletter/logo-whited.png" alt="invibes logo" width="111" style="width: 111px">
                         </center>
                     </a>
                 </td>
             </tr>
-            <tr><td style="padding-bottom: 22px"><h2 style="text-align: center;font-size: 20px;"><b>in-feed your brand</b></h2></td></tr>
         </table>
+        <spacer size="16">
+        <p style="text-align: center;font-size: 20px;color: #fff; font-weight: bold">in-feed your brand</p>
+        <spacer size="22">
         <center>
             <table style="width: 120px" width="120" align="center">
                 <tr>
                     <td style="vertical-align: middle">
                         <a href="https://www.linkedin.com/company/invibes/" target="_blank" title="linkedin">
                             <center style="min-width: 0px;">
-                                <img src="https://www.invibes.com/resources/images/newsletter/in.png" alt="" height="16" style="height: 16px;">
+                                <img src="https://www.invibes.com/resources/images/newsletter/lin.png" alt="" height="16" style="height: 16px;">
                             </center>
                         </a>
                     </td>
                     <td style="vertical-align: middle">
                         <a href="https://twitter.com/invibes_adv" target="_blank" title="twitter">
                             <center style="min-width: 0px;">
-                                <img src="https://www.invibes.com/resources/images/newsletter/twit.png" alt="" height="16" style="height: 16px;">
+                                <img src="https://www.invibes.com/resources/images/newsletter/twit-l.png" alt="" height="16" style="height: 16px;">
                             </center>
                         </a>
                     </td>
                     <td style="vertical-align: middle">
-                        <a href="#" target="_blank" title="">
+                        <a href="https://www.xing.com/companies/invibesadvertising" target="_blank" title="xing">
                             <center style="min-width: 0px;">
-                                <img src="https://i.ibb.co/K0wHBYJ/cust-l.png" alt="" height="16" style="height: 16px;">
+                                <img src="https://www.invibes.com/resources/images/newsletter/cust-l.png" alt="" height="16" style="height: 16px;">
                             </center>
                         </a>
                     </td>
                     <td style="vertical-align: middle">
                         <a href="https://www.instagram.com/invibes/" target="_blank"  title="instagram">
                             <center style="min-width: 0px;">
-                                <img src="https://www.invibes.com/resources/images/newsletter/inst.png" alt="instagram" height="16" style="height: 16px;">
+                                <img src="https://www.invibes.com/resources/images/newsletter/inst-l.png" alt="instagram" height="16" style="height: 16px;">
                             </center>
                         </a>
                     </td>
